--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "start": "node -r dotenv/config dist/server.js"
   },
   "dependencies": {
+    "axios": "^1.8.2",
+    "bullmq": "^5.41.8",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "fastify-mongodb": "^4.2.0",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^146.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
