--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "bullmq": "^5.41.8",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
+    "googleapis": "^146.0.0",
     "ioredis": "^5.6.0",
     "mongoose": "^8.12.1",
     "pino": "^9.6.0",
