--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "googleapis": "^146.0.0",
     "ioredis": "^5.6.0",
     "mongoose": "^8.12.1",
+    "nodemailer": "^6.10.0",
     "pino": "^9.6.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
