--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -16,12 +16,14 @@ services:
       - NODE_ENV=${NODE_ENV}
       - DOCKER=1
       - CALLBACK_API_HOOK=http://callbackapi:8080/Hooks/SendLog
+      - ELASTIC_SEARCH_NODE=http://elasticsearch:9200
     ports:
       - "3000:3000"  
     command: ["npm", "start"]
     depends_on:
       - mongo
       - redis-server
+      - elasticsearch
     networks:
       - backend-challenge-network
 
@@ -52,6 +54,27 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
       - "8080:8080"
+    networks:
+      - backend-challenge-network
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.3.3
+    environment:
+      - discovery.type=single-node
+      # Elasticsearch 8.x has HTTPS and auth on by default. This option is
+      # needed to use HTTP and no auth (as used in the tests)
+      # for demo purposes, this is fine.
+      - xpack.security.enabled=false
+    container_name: elasticsearch
+    ports: ['9200:9200']
+    networks:
+      - backend-challenge-network
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.3.3
+    container_name: kibana
+    ports: ['5601:5601']
+    depends_on: ['elasticsearch']
     networks:
       - backend-challenge-network
 
