--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@elastic/ecs-pino-format": "^1.5.0",
+    "@elastic/elasticsearch": "^8.17.1",
     "@fastify/autoload": "^6.2.0",
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.2",
@@ -23,6 +25,7 @@
     "mongoose": "^8.12.1",
     "nodemailer": "^6.10.0",
     "pino": "^9.6.0",
+    "pino-elasticsearch": "^8.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
